# src/entities/HeroContent.ts
@@ -1,0 +1,28 @@
+import {
+  Entity,
+  PrimaryGeneratedColumn,
+  Column,
+  CreateDateColumn,
+  UpdateDateColumn,
+} from "typeorm";
+
+@Entity({ name: "hero_content" })
+export class HeroContent {
+  @PrimaryGeneratedColumn()
+  id: number;
+
+  @Column()
+  image: string;
+
+  @Column()
+  title: string;
+
+  @Column({ type: "text" })
+  description: string;
+
+  @CreateDateColumn()
+  created_at: Date;
+
+  @UpdateDateColumn()
+  updated_at: Date;
+}
